feat(mcci): create three engine blocks and items, writing their models and drawing their textures

--- a/mcci/src/main/resources/assets/mcci/lang/en_us.json
+++ b/mcci/src/main/resources/assets/mcci/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "item.mcci.causal_machine": "Causal Machine"
+  "block.mcci.causal_machine": "Causal Machine",
+  "block.mcci.crafting_policy_machine": "Crafting Policy Machine",
+  "block.mcci.demand_policy_machine": "Demand Policy Machine",
+  "itemGroup.mcci.general": "Causal General"
 }
