feat(mcci::demand_policy): finish shadow-hunger logic and start shadow-safety logic

--- a/mcci/src/main/resources/assets/mcci/lang/en_us.json
+++ b/mcci/src/main/resources/assets/mcci/lang/en_us.json
@@ -833,6 +833,9 @@
   "block.mcci.causal_machine": "Causal Machine",
   "block.mcci.crafting_policy_machine": "Crafting Policy Machine",
   "block.mcci.demand_policy_machine": "Demand Policy Machine",
+  "item.mcci.causal_machine": "Causal Machine",
+  "item.mcci.crafting_policy_machine": "Crafting Policy Machine",
+  "item.mcci.demand_policy_machine": "Demand Policy Machine",
   "itemGroup.mcci.general": "Causal General",
   "gui.mcci.causal_machine.generation_button": "generate",
   "service.mcci.core.clink_type.item_block": "item-block link",
