feat(mcci::{crafting_policy,demand_policy}): fi demand engine and gui, and refactor crafting gui

--- a/mcci/src/main/resources/assets/mcci/lang/en_us.json
+++ b/mcci/src/main/resources/assets/mcci/lang/en_us.json
@@ -838,6 +838,12 @@
   "item.mcci.demand_policy_machine": "Demand Policy Machine",
   "itemGroup.mcci.general": "Causal General",
   "gui.mcci.causal_machine.generation_button": "generate",
+  "gui.mcci.demand_policy_machine.calculate_button": "Calculate",
+  "gui.mcci.demand_policy_machine.hunger_factor": "Hunger Factor",
+  "gui.mcci.demand_policy_machine.safety_factor": "Safety Factor",
+  "gui.mcci.demand_policy_machine.production_factor": "Production Factor",
+  "gui.mcci.demand_policy_machine.development_factor": "Development Factor",
+  "gui.mcci.demand_policy_machine.risk_factor": "Risk Factor",
   "service.mcci.core.clink_type.item_block": "item-block link",
   "service.mcci.core.clink_type.entity_block": "entity-block link",
   "service.mcci.core.clink_type.block_loot": "block-loot link",
