--- a/mcci/src/main/resources/assets/mcci/lang/zh_cn.json
+++ b/mcci/src/main/resources/assets/mcci/lang/zh_cn.json
@@ -7,6 +7,12 @@
   "item.mcci.demand_policy_machine": "需求决策机",
   "itemGroup.mcci.general": "因果通用",
   "gui.mcci.causal_machine.generation_button": "生成",
+  "gui.mcci.demand_policy_machine.calculate_button": "计算",
+  "gui.mcci.demand_policy_machine.hunger_factor": "饱食度因子",
+  "gui.mcci.demand_policy_machine.safety_factor": "安全性因子",
+  "gui.mcci.demand_policy_machine.production_factor": "生产力因子",
+  "gui.mcci.demand_policy_machine.development_factor": "发展度因子",
+  "gui.mcci.demand_policy_machine.risk_factor": "风险级因子",
   "service.mcci.core.clink_type.item_block": "物件-方块连接",
   "service.mcci.core.clink_type.entity_block": "实体-方块连接",
   "service.mcci.core.clink_type.block_loot": "方块-清单连接",
