feat(mcci::mcci): finish mcci causal engine basic functions

--- a/mcci/src/main/resources/assets/mcci/lang/en_us.json
+++ b/mcci/src/main/resources/assets/mcci/lang/en_us.json
@@ -837,7 +837,8 @@
   "item.mcci.crafting_policy_machine": "Crafting Policy Machine",
   "item.mcci.demand_policy_machine": "Demand Policy Machine",
   "itemGroup.mcci.general": "Causal General",
-  "gui.mcci.causal_machine.generation_button": "generate",
+  "gui.mcci.causal_machine.analyse_button": "analyse",
+  "gui.mcci.crafting_policy_machine.generation_button": "generate",
   "gui.mcci.demand_policy_machine.calculate_button": "Calculate",
   "gui.mcci.demand_policy_machine.hunger_factor": "Hunger Factor",
   "gui.mcci.demand_policy_machine.safety_factor": "Safety Factor",
