--- a/mcci/src/main/resources/assets/mcci/lang/zh_cn.json
+++ b/mcci/src/main/resources/assets/mcci/lang/zh_cn.json
@@ -6,7 +6,8 @@
   "item.mcci.crafting_policy_machine": "生产决策机",
   "item.mcci.demand_policy_machine": "需求决策机",
   "itemGroup.mcci.general": "因果通用",
-  "gui.mcci.causal_machine.generation_button": "生成",
+  "gui.mcci.causal_machine.analyse_button": "分析",
+  "gui.mcci.crafting_policy_machine.generation_button": "生成",
   "gui.mcci.demand_policy_machine.calculate_button": "计算",
   "gui.mcci.demand_policy_machine.hunger_factor": "饱食度因子",
   "gui.mcci.demand_policy_machine.safety_factor": "安全性因子",
